# plasma-audio-device-switcher

./: .gitignore  CMakeLists.txt  README.md  pack.sh
package/: CMakeLists.txt  Messages.sh  metadata.desktop
package/contents/config/: config.qml  main.xml
package/contents/ui/: ConfigGeneral.qml  main.qml
